--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 server.port=8098
 
 #use your aws credentials here
-aws.access-key=AKIA6Q477HDAF5WOWXPL
-aws.access-secret=9FczAdu7owZCLycQJUwFbERWDrjwYzReGfFuxywr
+aws.access-key=
+aws.access-secret=
 aws.region=ap-south-1
 
 #use your stream name that you have created
@@ -11,9 +11,9 @@ aws.stream-name=tp-kinesis-stream
 
 #app.url: http://localhost:9090/invest
 spring.jpa.hibernate.ddl-auto=validate
-spring.datasource.url=jdbc:mysql://my-producer-database.cqaool73nx6d.ap-south-1.rds.amazonaws.com:3306/user
-spring.datasource.username=admin
-spring.datasource.password=amazon123
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 
 application.name=spring-boot-consumer
